# rsolace

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: pyrsolace-ci.yml
pyrsolace/: Cargo.toml  README.md  pyproject.toml  pyrsolace.pyi
pyrsolace/examples/: async_sub.py  cb_sub.py  sync_sub.py
pyrsolace/src/: lib.rs
pyrsolace/tests/: test_auto_init.py  test_event.py  test_msg.py  test_receiver_len.py  test_sdt_serialization.py  test_user_prop.py  test_user_prop_stress.py
rsolace/: Cargo.toml  README.md  build.rs
rsolace-sys/: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
rsolace-sys/scripts/: create-binding.sh
rsolace-sys/src/: lib.rs  solace_bindings.rs
rsolace/examples/: async_example.rs  cache.rs  dev.rs  main.rs  pubsub.rs  replier.rs  requester.rs
rsolace/src/: lib.rs  main.rs  solcache.rs  solclient.rs  solcontainer.rs  solevent.rs  solmsg.rs  solprops.rs  types.rs  utils.rs
rsolace/tests/: modify_client_info.rs
