[package]
name = "pyrsolace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrsolace"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
pyo3 = { version = "0.19.1", features = ["extension-module", "chrono", "abi3-py37"] }
rsolace = { version = "0.1.5", path = "../rsolace" }
tracing = "0.1"
tracing-subscriber = "0.3"
