[package]
name = "pyrsolace"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrsolace"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
# once_cell = "1.19.0"
pyo3 = { version = "0.19.1", features = ["extension-module", "chrono", "abi3-py37"] }
# rayon = "1.10.0"
rsolace = { version = "0.1.8", path = "../rsolace" }
tracing = "0.1"
tracing-subscriber = "0.3"
