[package]
name = "pyrsolace"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrsolace"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
crossbeam = "0.8.4"
kanal = "0.1"
# once_cell = "1.19.0"
pyo3 = { version = "0.20", features = ["extension-module", "chrono", "abi3-py37"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
# rayon = "1.10.0"
rsolace = { version = "0.3.0", path = "../rsolace", features = ["channel", "tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
