[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyrsolace"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool]
rye = { dev-dependencies = [
    "ipython>=7.34.0",
] }



[tool.maturin]
features = ["pyo3/extension-module"]
