[package]
name = "rsolace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
enum_primitive = "0.1.1"
failure = "0.1.8"
rsolace-sys = { path = "../rsolace-sys" }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
rstest = "0.17.0"
