[package]
name = "rsolace"
version = "0.1.7"
edition = "2021"
description = "Solace bindings for the Rust"
keywords = ["solace"]
readme = "README.md"
license = "GPL-3.0-only"
categories = ["api-bindings"]
repository = "https://github.com/Yvictor/rsolace"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossbeam-channel = { version = "0.5.8", optional = true}
dashmap = "5.4.0"
enum_primitive = "0.1.1"
failure = "0.1.8"
rsolace-sys = { version = "0.1.7", path = "../rsolace-sys" }
snafu = { version = "0.7.4", features = ["rust_1_46"]}
tokio = { version = "1.28.2", optional = true}
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
dotenvy = "0.15.7"
rstest = "0.17.0"

[features]
default = ["channel"]
raw = []
channel = ["dep:crossbeam-channel"]
tokio = ["dep:tokio"]
